# src/modules/profile/profile.types.ts
@@ -1,0 +1,3 @@
+export interface IProfilePassword {
+  password: string;
+}
